# AdvancedProg

./: CMakeLists.txt  Task1.cpp
Task1_1/: CMakeLists.txt  Task1.cpp
Task1_2/: CMakeLists.txt  Task2.cpp
Task1_3/: CMakeLists.txt  Task1_3.cpp
Task2_1/: CMakeLists.txt  Task2_1.cpp
Task3_1/: CMakeLists.txt  Task3_1.cpp
Task3_2/: CMakeLists.txt  Task3_2.cpp
Task4_1/: test.cpp
Task4_2/: test.cpp
Task5_1/: Task5_1.cpp
Task5_2/: Task5_2.cpp
Task5_3/: Task5_3.cpp
Task6_1/: Task6_1.cpp
Task6_2/: Task6_2.cpp
Task6_3/: MyVector.cpp  MyVector.hpp  Task6_3.cpp
Task7_1/: Task7_1.cpp
Task7_2/: Task7_2.cpp
Task8_1/: Task8_1.cpp
Task8_3/: MyUniquePtr.cpp  MyUniquePtr.hpp  Task8_3.cpp
Task9_1/: Task9_1.cpp
Task9_2/: Task9_2.cpp
