cmake_minimum_required(VERSION 3.5)

project(AdvancedProg LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(AdvancedProg_1_1 Task1_1/Task1.cpp)
add_executable(AdvancedProg_1_2 Task1_2/Task2.cpp)
add_executable(AdvancedProg_1_3 Task1_3/Task1_3.cpp)
add_executable(AdvancedProg_2_1 Task2_1/Task2_1.cpp)
add_executable(AdvancedProg_3_1 Task3_1/Task3_1.cpp)
add_executable(AdvancedProg_3_2 Task3_2/Task3_2.cpp)



